cleanup [java]: formatting & pattern variables
Space-RevId: 28a291507b3940282bde934228586b1f8743b79c

GitOrigin-RevId: db0d0e4269ea151cac385c8479b0ed30c4a21eb5